--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,20 +1,56 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
->
-<head>
-    <title>Spring Security Example </title>
-</head>
-<body>
-<div th:if="${param.error}">
-    Invalid username and password.
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<th:block th:insert="fragments/head :: head"></th:block>
+<body class="bg-primary">
+<div id="layoutAuthentication">
+    <div id="layoutAuthentication_content">
+        <main>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-5">
+                        <div class="card shadow-lg border-0 rounded-lg mt-5">
+                            <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
+                            <div class="card-body">
+                                <div th:if="${param.error}">
+                                    <span style="color: red">Invalid username and password.</span>
+                                </div>
+                                <div th:if="${param.logout}">
+                                    <span style="color: red">You have been logged out.</span>
+                                </div>
+                                <form method="post" th:action="@{/login}">
+                                    <div class="form-group">
+                                        <label class="small mb-1"> Username</label>
+                                        <input class="form-control py-4" name="username" placeholder="Enter username"
+                                               type="text"/>
+
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="small mb-1"> Password</label>
+                                        <input class="form-control py-4" name="password" placeholder="Enter username"
+                                               type="password"/>
+
+                                    </div>
+                                    <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
+                                        <a class="small" href="#">Forgot Password?</a>
+                                        <input type="submit" value="Login"/>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+    <div id="layoutAuthentication_footer">
+        <footer class="py-4 bg-light mt-auto">
+            <th:block th:insert="fragments/footer :: footer"></th:block>
+        </footer>
+    </div>
 </div>
-<div th:if="${param.logout}">
-    You have been logged out.
-</div>
-<form method="post" th:action="@{/login}">
-    <div><label> User Name : <input name="username" type="text"/> </label></div>
-    <div><label> Password: <input name="password" type="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
-</form>
+<script crossorigin="anonymous" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script crossorigin="anonymous"
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+<script src="js/scripts.js" th:src="@{/js/scripts.js}"></script>
 </body>
 </html>
