--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,5 @@
-<div class="py-4 bg-light mt-auto" th:fragment="footer"
-     xmlns:th="http://www.thymeleaf.org">
+<footer class="py-4 bg-light mt-auto" th:fragment="footer"
+        xmlns:th="http://www.thymeleaf.org">
     <div class="container-fluid">
         <div class="d-flex align-items-center justify-content-between small">
             <div class="text-muted">Copyright &copy; Your Website 2020</div>
@@ -10,4 +10,4 @@
             </div>
         </div>
     </div>
-</div>
+</footer>
