--- a/src/main/resources/templates/fragments/sidenav.html
+++ b/src/main/resources/templates/fragments/sidenav.html
@@ -19,7 +19,7 @@
                 <div aria-labelledby="headingOne" class="collapse" data-parent="#sidenavAccordion"
                      id="collapseLayouts">
                     <nav class="sb-sidenav-menu-nested nav">
-                        <a class="nav-link" href="layout-static.html">Static Navigation</a>
+                        <a class="nav-link" th:href="${'/rooms'}">Rooms</a>
                         <a class="nav-link" href="layout-sidenav-light.html">Light Sidenav</a>
                     </nav>
                 </div>
