--- a/src/main/resources/templates/fragments/sidenav.html
+++ b/src/main/resources/templates/fragments/sidenav.html
@@ -20,7 +20,7 @@
                      id="collapseLayouts">
                     <nav class="sb-sidenav-menu-nested nav">
                         <a class="nav-link" th:href="${'/rooms'}">Rooms</a>
-                        <a class="nav-link" href="layout-sidenav-light.html">Light Sidenav</a>
+                        <a class="nav-link" th:href="${'/guests'}">Guests</a>
                     </nav>
                 </div>
                 <a aria-controls="collapsePages" aria-expanded="false" class="nav-link collapsed"
