--- a/src/main/resources/templates/fragments/sidenav.html
+++ b/src/main/resources/templates/fragments/sidenav.html
@@ -3,12 +3,25 @@
     <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
         <div class="sb-sidenav-menu">
             <div class="nav">
-                <div class="sb-sidenav-menu-heading">Core</div>
-                <a class="nav-link" th:href="${'/dashboard'}">
-                    <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                    Dashboard
+                <!--                <div class="sb-sidenav-menu-heading">Core</div>-->
+                <!--                <a class="nav-link" th:href="${'/dashboard'}">-->
+                <!--                    <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>-->
+                <!--                    Dashboard-->
+                <!--                </a>-->
+                <a aria-controls="guestLayouts" aria-expanded="false" class="nav-link collapsed"
+                   data-target="#guestLayouts"
+                   data-toggle="collapse" href="#">
+                    <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                    Guest Management
+                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                 </a>
-                <div class="sb-sidenav-menu-heading">Business</div>
+                <div aria-labelledby="headingOne" data-parent="#sidenavAccordion"
+                     id="guestLayouts">
+                    <nav class="sb-sidenav-menu-nested nav">
+                        <a class="nav-link" th:href="${'/guests'}">Guests</a>
+                        <!--                        <a class="nav-link" th:href="${'/rooms/available'}">Available Rooms</a>-->
+                    </nav>
+                </div>
                 <a aria-controls="collapseLayouts" aria-expanded="false" class="nav-link collapsed"
                    data-target="#collapseLayouts"
                    data-toggle="collapse" href="#">
@@ -16,11 +29,12 @@
                     Room Management
                     <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                 </a>
-                <div aria-labelledby="headingOne" class="collapse" data-parent="#sidenavAccordion"
+                <div aria-labelledby="headingOne" data-parent="#sidenavAccordion"
                      id="collapseLayouts">
                     <nav class="sb-sidenav-menu-nested nav">
-                        <a class="nav-link" th:href="${'/rooms'}">Rooms</a>
-                        <a class="nav-link" th:href="${'/guests'}">Guests</a>
+                        <a class="nav-link" th:href="${'/rooms'}">All Rooms</a>
+                        <a class="nav-link" th:href="${'/rooms/available'}">Available Rooms</a>
+                        <a class="nav-link" th:href="${'/rooms/occupied'}">Occupied Rooms</a>
                     </nav>
                 </div>
                 <a aria-controls="collapsePages" aria-expanded="false" class="nav-link collapsed"
@@ -30,47 +44,14 @@
                     Booking Management
                     <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                 </a>
-                <div aria-labelledby="headingTwo" class="collapse" data-parent="#sidenavAccordion"
+                <div aria-labelledby="headingTwo" data-parent="#sidenavAccordion"
                      id="collapsePages">
                     <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
-                        <a aria-controls="pagesCollapseAuth" aria-expanded="false" class="nav-link collapsed"
-                           data-target="#pagesCollapseAuth" data-toggle="collapse" href="#">
-                            Authentication
-                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                        </a>
-                        <div aria-labelledby="headingOne" class="collapse" data-parent="#sidenavAccordionPages"
-                             id="pagesCollapseAuth">
-                            <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="login.html">Login</a>
-                                <a class="nav-link" href="register.html">Register</a>
-                                <a class="nav-link" href="password.html">Forgot Password</a>
-                            </nav>
-                        </div>
-                        <a aria-controls="pagesCollapseError" aria-expanded="false" class="nav-link collapsed"
-                           data-target="#pagesCollapseError" data-toggle="collapse"
-                           href="#">
-                            Error
-                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                        </a>
-                        <div aria-labelledby="headingOne" class="collapse" data-parent="#sidenavAccordionPages"
-                             id="pagesCollapseError">
-                            <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="401.html">401 Page</a>
-                                <a class="nav-link" href="404.html">404 Page</a>
-                                <a class="nav-link" href="500.html">500 Page</a>
-                            </nav>
-                        </div>
+                        <a class="nav-link" th:href="${'/bookings/reserve'}">Reservation</a>
+                        <a class="nav-link" th:href="${'/bookings/checkin'}">Checkin</a>
+                        <a class="nav-link" th:href="${'/bookings/checkout'}">Checkout</a>
                     </nav>
                 </div>
-                <div class="sb-sidenav-menu-heading">Addons</div>
-                <a class="nav-link" href="charts.html">
-                    <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                    Charts
-                </a>
-                <a class="nav-link" href="tables.html">
-                    <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                    Tables
-                </a>
             </div>
         </div>
         <div class="sb-sidenav-footer">
