--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -75,13 +75,13 @@
                     </div>
                 </div>
                 <div class="card mb-4">
-                    <div class="card-header">
-                        <i class="fas fa-table mr-1"></i>
-                        DataTable Example
-                    </div>
+                    <!--                    <div class="card-header">-->
+                    <!--                        <i class="fas fa-table mr-1"></i>-->
+                    <!--                        DataTable Example-->
+                    <!--                    </div>-->
                     <div class="card-body">
                         <div class="table-responsive">
-                            <table cellspacing="0" class="table table-bordered" id="dataTable" width="100%">
+                            <table cellspacing="0" class="table table-bordered" id="dataTable">
                                 <thead>
                                 <tr>
                                     <th>Name</th>
