--- a/src/main/resources/templates/room/edit.html
+++ b/src/main/resources/templates/room/edit.html
@@ -38,11 +38,14 @@
                         </div>
                         <div class="form-group">
                             <label>Price</label>
-                            <input class="form-control" name="price" th:value="${room.price}" type="text">
+                            <div class="input-group">
+                                <input class="form-control" name="price" placeholder="Price" th:value="${room.price}"
+                                       type="text">
+                                <div class="input-group-addon">.00</div>
+                            </div>
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <!--                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" th:ref="${'/rooms'}">-->
                         <input class="btn btn-info" type="submit" value="Save">
                     </div>
                 </form>
