--- a/src/main/resources/templates/room/list.html
+++ b/src/main/resources/templates/room/list.html
@@ -13,21 +13,20 @@
                     <li class="breadcrumb-item"><a th:href="${'/'}">Home</a></li>
                     <li class="breadcrumb-item active">Rooms</li>
                 </ol>
-
+                <div class="table-title">
+                    <div class="row">
+                        <div class="col-sm-9">
+                            <h2></h2>
+                        </div>
+                        <div class="col-sm-3">
+                            <a class="btn btn-success" th:href="@{/rooms/create}"><i class="material-icons">&#xE147;</i>
+                                <span>Add Room</span></a>
+                        </div>
+                    </div>
+                </div>
                 <div class="card mb-4">
                     <div class="card-body">
                         <div class="table-responsive">
-                            <div class="table-title">
-                                <div class="row">
-                                    <div class="col-sm-9">
-                                        <h2></h2>
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <a class="btn btn-success" th:href="@{/rooms/create}"><i class="material-icons">&#xE147;</i>
-                                            <span>Add Room</span></a>
-                                    </div>
-                                </div>
-                            </div>
                             <table cellspacing="0" class="table table-bordered" id="dataTable"
                                    th:if="${not #lists.isEmpty(rooms)}" width="100%">
                                 <thead>
@@ -36,6 +35,7 @@
                                     <th>Capacity</th>
                                     <th>Type</th>
                                     <th>Price</th>
+                                    <th>Status</th>
                                     <th>Actions</th>
                                 </tr>
                                 </thead>
@@ -45,6 +45,7 @@
                                     <th>Capacity</th>
                                     <th>Type</th>
                                     <th>Price</th>
+                                    <th>Status</th>
                                     <th>Actions</th>
                                 </tr>
                                 </tfoot>
@@ -54,6 +55,7 @@
                                     <td th:text="${room.capacity}">System Architect</td>
                                     <td th:text="${room.roomType}">Edinburgh</td>
                                     <td th:text="${room.price}">61</td>
+                                    <td th:text="${room.status}">61</td>
                                     <td>
                                         <a class="edit" th:href="@{/rooms/edit/{id}(id=${room.id})}">
                                             <i class="material-icons" data-toggle="tooltip"
