--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -11,26 +11,26 @@
                 <h1 class="mt-4">Guest</h1>
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a th:href="${'/'}">Home</a></li>
-                    <li class="breadcrumb-item active">Guests</li>
+                    <li class="breadcrumb-item active">Users</li>
                 </ol>
-                <div class="table-title">
-                    <div class="row">
-                        <div class="col-sm-9">
-                            <h2></h2>
-                        </div>
-                        <div class="col-sm-3">
-                            <a class="btn btn-success" th:href="@{/guests/create}"><i
-                                    class="material-icons">&#xE147;</i>
-                                <span>Add Guest</span></a>
-                        </div>
-                    </div>
-                </div>
+
                 <div class="card mb-4">
                     <div class="card-body">
                         <div class="table-responsive">
-
+                            <div class="table-title">
+                                <div class="row">
+                                    <div class="col-sm-9">
+                                        <h2></h2>
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <a class="btn btn-success" th:href="@{/users/create}"><i
+                                                class="material-icons">&#xE147;</i>
+                                            <span>Add User</span></a>
+                                    </div>
+                                </div>
+                            </div>
                             <table cellspacing="0" class="table table-bordered" id="dataTable"
-                                   th:if="${not #lists.isEmpty(guests)}" width="100%">
+                                   th:if="${not #lists.isEmpty(users)}" width="100%">
                                 <thead>
                                 <tr>
                                     <th>Full Name</th>
